# Perseus

./: .gitignore  CMakeLists.txt  CmakeLists.txt
.cache/clangd/index/: Archetype.h.6FDB63B8ACA43FF4.idx  ComponentStorage.h.B70DE33343FF9325.idx  Components.h.53A930F596A8834A.idx  ECSView.h.39B3F4F446189011.idx  Entity.h.3B23100D8C3C9A80.idx  EntityBuilder.h.230FD5F5244B65CB.idx  EntityManager.h.CECFF0CA6769C151.idx  IndexQueue.h.FAC9B039B5BEDDB0.idx  Meta.h.C87580790A220869.idx  Registry.h.CE0A5EF5F95F8137.idx  config.h.CC3F6163FA6EDFE4.idx  main.cpp.99FCECE7B36EF734.idx  scheduler.h.5F5B1CDA4D9DE0B3.idx  systemBase.h.693371980E277113.idx  templating.cpp.98A2B1EAA151D50E.idx  testECS.cpp.37F9AC3333635D1C.idx  testSystem1.h.F3F61480AA17D7FB.idx  testSystem2.h.0DC7FCEA9ABF1AD5.idx
apps/sandbox/: main.cpp  templating.cpp
include/config/: config.h
include/ecs/: Archetype.h  ComponentStorage.h  ECSView.h  Entity.h  EntityBuilder.h  EntityManager.h  IndexQueue.h  Meta.h  Registry.h
include/scheduler/: scheduler.h
include/systems/: Components.h  systemBase.h  testSystem1.h  testSystem2.h
tests/ecs/: testECS.cpp
